--- a/Biblioteca/Biblioteca.csproj
+++ b/Biblioteca/Biblioteca.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\AcessoLivros.cs" />
     <Compile Include="Data\Conexao.cs" />
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
