--- a/Biblioteca/Biblioteca.csproj
+++ b/Biblioteca/Biblioteca.csproj
@@ -49,17 +49,26 @@
   <ItemGroup>
     <Compile Include="Data\AcessoLivros.cs" />
     <Compile Include="Data\Conexao.cs" />
-    <Compile Include="Forms\Form1.cs">
+    <Compile Include="Forms\FormPrincipalLivro.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Forms\FormPrincipalLivro.Designer.cs">
+      <DependentUpon>FormPrincipalLivro.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormCadastroLivro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormCadastroLivro.Designer.cs">
+      <DependentUpon>FormCadastroLivro.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Livro.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Forms\Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\FormCadastroLivro.resx">
+      <DependentUpon>FormCadastroLivro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormPrincipalLivro.resx">
+      <DependentUpon>FormPrincipalLivro.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
