--- a/Biblioteca/Biblioteca.csproj
+++ b/Biblioteca/Biblioteca.csproj
@@ -48,7 +48,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\AcessoLivros.cs" />
+    <Compile Include="Data\AcessoUsuario.cs" />
     <Compile Include="Data\Conexao.cs" />
+    <Compile Include="Forms\FormCadastroUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormCadastroUsuario.Designer.cs">
+      <DependentUpon>FormCadastroUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormPrincipalBiblioteca.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +74,12 @@
     <Compile Include="Forms\FormCadastroLivro.Designer.cs">
       <DependentUpon>FormCadastroLivro.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormPrincipalUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormPrincipalUsuario.Designer.cs">
+      <DependentUpon>FormPrincipalUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Livro.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Program.cs" />
@@ -74,11 +87,17 @@
     <EmbeddedResource Include="Forms\FormCadastroLivro.resx">
       <DependentUpon>FormCadastroLivro.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormCadastroUsuario.resx">
+      <DependentUpon>FormCadastroUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormPrincipalBiblioteca.resx">
       <DependentUpon>FormPrincipalBiblioteca.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormPrincipalLivro.resx">
       <DependentUpon>FormPrincipalLivro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormPrincipalUsuario.resx">
+      <DependentUpon>FormPrincipalUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
